<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ok"
        app:layout_constraintEnd_toEndOf="@+id/edtPassword2Register"
        app:layout_constraintStart_toStartOf="@+id/edtPassword2Register"
        app:layout_constraintTop_toBottomOf="@+id/tvAuth" />

    <EditText
        android:id="@+id/edtPasswordRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtUserNameRegister" />

    <TextView
        android:id="@+id/tvAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/do_you_have_accaunt"
        android:textColor="@color/colorBlue"
        android:textAlignment="textEnd"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/edtPassword2Register"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword2Register" />

    <ImageView
        android:id="@+id/imgPhotoRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/edtUserNameRegister"
        app:layout_constraintStart_toStartOf="@+id/edtUserNameRegister"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_a_photo_24" />

    <EditText
        android:id="@+id/edtPassword2Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/repeed_your_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edtPasswordRegister"
        app:layout_constraintStart_toStartOf="@+id/edtPasswordRegister"
        app:layout_constraintTop_toBottomOf="@+id/edtPasswordRegister" />

    <EditText
        android:id="@+id/edtUserNameRegister"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/enter_you_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edtPasswordRegister"
        app:layout_constraintStart_toStartOf="@+id/edtPasswordRegister"
        app:layout_constraintTop_toBottomOf="@+id/imgPhotoRegister" />

    <ProgressBar
        android:id="@+id/determinateBarReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:progress="25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="@dimen/elevation"
        android:visibility="gone"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
